--- a/laravel/install.txt
+++ b/laravel/install.txt
@@ -13,3 +13,5 @@ Package manifest generated successfully.
 Application key set successfully.
 
 
+php artisan make:migration create_userx_table --create=userx --path=/app/Modules/Adminx/Migrations
+php artisan migrate --path=/app/Modules/Adminx/Migrations
