--- a/laravel/install.txt
+++ b/laravel/install.txt
@@ -17,3 +17,10 @@ php artisan make:migration create_userx_table --create=userx --path=/app/Modules
 php artisan migrate --path=/app/Modules/Adminx/Migrations
 
  php artisan db:seed --class=UserSeeder
+ <link href="/assets/70478681/css/bootstrap.css" rel="stylesheet">
+
+ mix.copy('node_modules/jquery/dist/jquery.min.js', 'public/js/jquery.min.js')
+ .copy('node_modules/jquery-ui-dist/jquery-ui.min.js', 'public/js/jquery-ui.min.js')
+ .copy('node_modules/jquery-ui-dist/jquery-ui.min.css', 'public/css/jquery-ui.min.css')
+ .copy('node_modules/bootstrap/dist/js/bootstrap.min.js', 'public/js/bootstrap.min.js')
+ .copy('node_modules/bootstrap/dist/css/bootstrap.min.css', 'public/css/bootstrap.min.css');
