--- a/laravel/install.txt
+++ b/laravel/install.txt
@@ -17,10 +17,14 @@ php artisan make:migration create_userx_table --create=userx --path=/app/Modules
 php artisan migrate --path=/app/Modules/Adminx/Migrations
 
  php artisan db:seed --class=UserSeeder
- <link href="/assets/70478681/css/bootstrap.css" rel="stylesheet">
 
- mix.copy('node_modules/jquery/dist/jquery.min.js', 'public/js/jquery.min.js')
- .copy('node_modules/jquery-ui-dist/jquery-ui.min.js', 'public/js/jquery-ui.min.js')
- .copy('node_modules/jquery-ui-dist/jquery-ui.min.css', 'public/css/jquery-ui.min.css')
- .copy('node_modules/bootstrap/dist/js/bootstrap.min.js', 'public/js/bootstrap.min.js')
- .copy('node_modules/bootstrap/dist/css/bootstrap.min.css', 'public/css/bootstrap.min.css');
+ для интеграции глификонов
+ Скопируйте файлы шрифтов с: https://github.com/twbs/bootstrap-sass/tree/master/assets/fonts/bootstrap
+ Скопируйте файл https://github.com/twbs/bootstrap-sass/blob/master/assets/stylesheets/bootstrap/_glyphicons.scss в свою папку bootstrap/scss
+ Откройте файл scss/bootstrap/bootstrap.scss и запишите следующий код SCSS в конце этого файла:
+ $bootstrap-sass-asset-helper: false;
+ $icon-font-name: 'glyphicons-halflings-regular';
+ $icon-font-svg-id: 'glyphicons_halflingsregular';
+ $icon-font-path: '../fonts/';
+ @import "glyphicons";
+ Запустите: npm run dist чтобы перекомпилировать ваш код с Glyphicons.
